--- a/MIDWEEK MEETING.html
+++ b/MIDWEEK MEETING.html
@@ -7,7 +7,7 @@
 <H1><B><i>रविवार की सभा</i></B></H1>
 <MAIN>
  <NAV><A HREF="MIDWEEK MEETING.html"><B>बुधवार की सभा</B></A></NAV>
- <NAV><A HREF="INDEX.html"><B>वापस जाए</B></A></NAV>
+ <NAV><A HREF="index.html"><B>वापस जाए</B></A></NAV>
 </MAIN>
 <table border=10 style="100">
   <tr>
@@ -15,13 +15,31 @@
       <th><B>नाम</B></th>
   </tr>
   <tr>
+    <td>सभापति</td>
+      <td>Jackson</td>
+  </tr>
+
+    <tr>
     <td>यूसुफ ने खुद पर काबू रखा</td>
       <td>Jackson</td>
+  </tr>
+    <tr>
+      <td>ढूँढ़ें अनमोल रत्न</td>
+      <td>Eve</td>
   </tr>
     <tr>
     <td>पढ़ने के लिए आयतें:</td>
      <td>Jackson</td>
 </tr>
+   <tr>
+      <td>बढ़ाएँ प्रचार में हुनर</td>
+      <td>Jackson</td>
+  </tr>
+
+    <tr>
+      <td>पूरी तसवीर पाने की कोशिश कीजिए</td>
+      <td>Jackson</td>
+  </tr>
     <tr>
        <td>जीएँ मसीहियों की तरह</td>
        <td>Jackson</td>
@@ -30,20 +48,6 @@
         <td>मंडली का बाइबल अध्ययन</td>
         <td>Jackson</td>
     </tr>
-
-  <tr>
-      <td>ढूँढ़ें अनमोल रत्न</td>
-      <td>Eve</td>
-  </tr>
-    <tr>
-      <td>बढ़ाएँ प्रचार में हुनर</td>
-      <td>Jackson</td>
-  </tr>
-    <tr>
-      <td>पूरी तसवीर पाने की कोशिश कीजिए</td>
-      <td>Jackson</td>
-  </tr>
-
     <tr>
       <td>प्रार्थना</td>
      <td>Jackson</td>
