--- a/SUNDAY MEETING.html
+++ b/SUNDAY MEETING.html
@@ -7,7 +7,7 @@
 <H1><B><i>रविवार की सभा</i></B></H1>
 <MAIN>
  <NAV><A HREF="MIDWEEK MEETING.html"><B>बुधवार की सभा</B></A></NAV>
- <NAV><A HREF="INDEX.html"><B>वापस जाए</B></A></NAV>
+ <NAV><A HREF="index.html"><B>वापस जाए</B></A></NAV>
 </MAIN>
 <table border=10 style="100">
   <tr>
