--- a/MIDWEEK MEETING.html
+++ b/MIDWEEK MEETING.html
@@ -1,15 +1,17 @@
 <HTML>
 
 <HEAD>
-<title> रविवार की सभा </title>
+<title> बुधवार की सभा </title>
 </HEAD>
+<hr>
 <BODY>
-<H1><B><i>रविवार की सभा</i></B></H1>
+
+<H1><B><i><font size="500"> बुधवार की सभा</font></i></B></H1>
 <MAIN>
- <NAV><A HREF="MIDWEEK MEETING.html"><B>बुधवार की सभा</B></A></NAV>
- <NAV><A HREF="index.html"><B>वापस जाए</B></A></NAV>
+    <NAV><A HREF="SUNDAY MEETING.html"><B><font size="100">रविवार की सभा</font></B></A></NAV>
+ <NAV><A HREF="index.html"><B><font size="100">वापस जाए</font> </B></A></NAV>
 </MAIN>
-<table border=10 style="100">
+<table border=5 style="1000" width="1000"  >
   <tr>
       <th><B>भाग</B></th>
       <th><B>नाम</B></th>
