--- a/SUNDAY MEETING.html
+++ b/SUNDAY MEETING.html
@@ -6,10 +6,10 @@
 <BODY>
 <H1><B><i>रविवार की सभा</i></B></H1>
 <MAIN>
- <NAV><A HREF="MIDWEEK MEETING.html"><B>बुधवार की सभा</B></A></NAV>
-  <NAV><A HREF="index.html"><B>वापस जाए</B></A></NAV>
+     <NAV><A HREF="MIDWEEK MEETING.html"><B><font size="100">बुधवार की सभा</font></B></A></NAV>
+ <NAV><A HREF="index.html"><B><font size="100">वापस जाए</font> </B></A></NAV>
 </MAIN>
-<table border=10 style="100">
+<table border=5 style="1000" width="1000"  >
   <tr>
       <th><B>भाग</B></th>
       <th><B>नाम</B></th>
